# SemSearch

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/embeddings/: bm25_corpus.pkl  spacy_doc_vectors.npy  transformer_embeddings.npy
data/evaluation/: evaluation.csv
data/hot_keywords/: keybert_hot_keywords.json  yake_hot_keywords.json
data/models/: bm25_model.pkl
evaluation/: evaluation_results.csv
notebooks/: SemSearch.ipynb
src/: config.py  evaluation.py  evaluation_utils.py  gradio.py  hot_keywords.py  lexical_search.py  logger_config.py  process_data.py  semantic_search.py  spacy_search.py  utils.py
