[project]
name = "semsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "faiss-cpu>=1.12.0",
    "keybert>=0.9.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.7",
    "yake>=0.6.0",
]
